hashmaps1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
error[E0425]: cannot find value `basket` in this scope
  --> src/lib.rs:22:5
   |
22 |     basket.insert(String::from("banana"), 2);
   |     ^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
